# Makefile for gperf/lib

# Copyright (C) 1989, 1992-1993, 1998, 2002, 2006, 2009, 2012, 2016, 2022 Free Software Foundation, Inc.
# Written by Douglas C. Schmidt <schmidt@ics.uci.edu>
# and Bruno Haible <bruno@clisp.org>.
# Refactored by Reini Urban, 2022
#
# This file is part of GNU GPERF.
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

lib_LIBRARIES = libgp.a
libgp_a_SOURCES  = getopt.c getopt1.c getline.cc hash.cc
EXTRA_DIST = getline.h hash.h getopt.h
#CPPFLAGS = @CPPFLAGS@ -I$(srcdir)
